# html2pdf4doc_python

./: .gitattributes  .gitignore  .gitmodules  Dockerfile  LICENSE  README.md  entrypoint.sh  mypy.ini  pyproject.toml  requirements.development.txt  requirements.txt  ruff.toml  tasks.py
.github/workflows/: ci-linux-ubuntu-latest.yml  ci-mac.yml  ci-windows.yml  ci_fuzz_linux.yml  docker.yml
developer/: pip_install_hpdf_deps.py  pip_install_html2pdf4doc_deps.py  pip_install_html2print_deps.py
hpdf/: hpdf.py
html2pdf4doc/: __init__.py  html2pdf4doc.py  html2pdf4doc_fuzzer.py  main.py  main_fuzzer.py
html2pdf4doc/html2pdf4doc_js/: html2pdf4doc.min.js
html2print/: html2print.py
html2print/html2pdf_js/: html2pdf.min.js
tests/fuzz/: conftest.py
tests/fuzz/00_hello_world/: file_to_mutate.html  test_case.py
tests/fuzz/01_strictdoc_guide_202510/: test_case.py
tests/fuzz/01_strictdoc_guide_202510/strictdoc/docs/: strictdoc_01_user_guide-PDF.html
tests/fuzz/20_L1_Open_Requirements_Tool_202511/: test_case.py
tests/fuzz/20_L1_Open_Requirements_Tool_202511/assets/: project_map.js
tests/fuzz/20_L1_Open_Requirements_Tool_202511/strictdoc/docs/: strictdoc_20_L1_Open_Requirements_Tool-PDF.html
tests/fuzz/21_L2_StrictDoc_Requirements_202511/: test_case.py
tests/fuzz/21_L2_StrictDoc_Requirements_202511/strictdoc/docs/: strictdoc_21_L2_StrictDoc_Requirements-PDF.html
tests/fuzz/_incremental/30_pusher_example/: case_001.html  test_case.py
tests/fuzz/_incremental/30_pusher_example/css/: base.css  node_content.css
tests/integration/: expect_exit.py  lit.cfg  lit.cfg.py  main.css
tests/integration/01_hello_world/: index.html  test.itest  test.py
tests/integration/02_two_pages/: index.html  test.itest  test.py
tests/integration/03_cache_dir_argument/: test.itest
tests/integration/04_two_documents/: index2.html  test.itest  test.py
tests/integration/05_page_load_timeout/: index1.html  test.itest
tests/integration/06_page_load_timeout_validation/: index1.html  test.itest
tests/integration/20_fuzz_integration/: test.itest
tests/integration/40_only_child_does_not_break_page_when_surrounded_by_text_nodes/: test.py
tests/integration/40_sdoc_only_child_does_not_break_page_when_surrounded_by_text_nodes/: test.itest  test.py
tests/integration/40_sdoc_only_child_does_not_break_page_when_surrounded_by_text_nodes/strictdoc/docs/: index.html
tests/integration/_validation/20251011_strictdoc_guide_broken_admonition_page_split/: test.itest
tests/integration/_validation/20251011_strictdoc_guide_broken_admonition_page_split/strictdoc/docs/: strictdoc_01_user_guide-PDF.html
tests/unit/: test_chrome_driver_manager.py
