[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "html2print/html2print.py"

[tool.hatch.build]
include = [
    "/html2print/",
    "LICENSE",
    "README.md",
    "pyproject.toml"
]

exclude = [
    "/submodules",
    "/tests",
]

[project]
name = "html2print"
dynamic = ["version"]
description = "Python client for HTML2PDF JavaScript library."
readme = "README.md"
# https://github.com/pypa/twine/issues/1216 license-files is broken as of 2025-02-03
# Using [] as a suggested workaround.
# license-files = [ "LICENSE" ]
license-files = []
requires-python = ">=3.8"
authors = [
    { name = "Stanislav Pankevich", email = "s.pankevich@gmail.com" },
    { name = "Maryna Balioura", email = "mettta@gmail.com" },
]
classifiers = [
    # "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

dependencies = [
    # HTML2PDF dependencies
    "selenium",
    "webdriver-manager",

    # requests is used by HTML2PDF_HTTPClient.
    "requests",
]

[project.optional-dependencies]
development = [
    # Development tasks
    "invoke>=1.4.1",
    "tox>=4.4.8",
]

[project.scripts]
html2print = "html2print.html2print:main"

[project.urls]
Changelog = "https://github.com/mettta/html2pdf_python/releases/"
# Funding = "https://..."
Homepage = "https://github.com/mettta/html2pdf_python/"
Source = "https://github.com/mettta/html2pdf_python/"

[tool.pytest.ini_options]
addopts = "--import-mode=importlib"
pythonpath = [
  "."
]
